--- a/examples/tinywl/qml.qrc
+++ b/examples/tinywl/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>Window.qml</file>
+        <file>ClientWindow.qml</file>
         <file>Output.qml</file>
-        <file>SurfaceDelegate.qml</file>
+        <file>Main.qml</file>
     </qresource>
 </RCC>
