Refactor a lot of things
1. Move the render implementation to qtquick directory.
2. Support multi output.
3. Render software cursor in QtQuick.
4. Update copyright for all files.

--- a/examples/tinywl/qml.qrc
+++ b/examples/tinywl/qml.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>Window.qml</file>
-        <file>Output.qml</file>
-        <file>SurfaceDelegate.qml</file>
+        <file>ClientWindow.qml</file>
+        <file>Main.qml</file>
     </qresource>
 </RCC>
